--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -226,7 +226,7 @@
 		<div class="estimate">
 			<p><b>Femoral head</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years of age';">
+				<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years of age';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='12-16 years (F);14-19 years (M)';">
 
@@ -236,7 +236,7 @@
 			<br>
 			<br><br><p><b>Greater trochanter</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years of age';">
+				<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years of age';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='14-16 years(F); 16-18 years (M)';">
 
@@ -246,7 +246,7 @@
 			<br>
 			<br><br><p><b>Lesser trochanter</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 16 years';">
+				<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 16 years';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='16-17 years (M)';">
 
@@ -256,7 +256,7 @@
 			<br>
 			<br><br><p><b>Distal epiphysis - condyles</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 (F)or 16 (M)';">
+				<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 (F)or 16 (M)';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='14-18 (F) or 16-20 (M) - 4 years of age';">
 
@@ -279,7 +279,8 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="patella1">Patella</a></h2>
-		<p>Patella description -morphology- no age-range boxes</div>
+			<p>Since the patella has no separate ossification centers that fuse to it, it’s best to look at its overall morphology.  The patella appears between 1½ and 3½ years.  By 4-5 years old, it is still very course and tough, but it does begin to take shape.  By puberty, it has essentially taken on its adult form (Prakash et al. 1979).</p>
+		</div>
 	</div>	
 </section>
 			    
@@ -294,29 +295,33 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="tibia1">Tibia</a></h2>
-		<p>Tibia desctiption</div>
+		<p>Similar to the femur, the tibia may be represented by two ossification centers at birth: the diaphysis and the proximal epiphysis.  If not present at birth, they usually appear within the next few weeks (Scheuer and Black 2004).</p>
+		<p>Within the next/first 10 months of life, the secondary centers for the distal epiphyses begin to ossify and between 3 and 5 years, and the medial malleolus commences ossification.  The distal epiphyses start fusing to the diaphysis between 14-16 years (females) and 15-18 years (males) (Love et al. 1990).</p>
+		<p>Fusion of the proximal epiphysis comes a little bit later in most cases, between 13 and 17 years old in females and 15 and 19 in males.</p>
+
+		</div>
 	</div>
 	
 	<div class="col-lg-3">
 		<div class="estimate">
 			<p><b>Proximal epiphysis</b></p>
 		
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 13 years';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='13-17 (F) and 15-19 (M)';">
 			
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 17 (F) or 19 (M)';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
 			<br><br><p><b>Distal epiphysis</b></p>
 		
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='14-16 (F) and 15-18 (M)';">
 
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (F) or 18 (M)';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -335,33 +340,33 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="fibula1">Fibula</a></h2>
-		<p>The occipital bone is made up of multiple ossification centers that appear in utero. Postnatal fusion of these ossification centers to each other are not all concurrent, but occur in a specific order and on a known schedule. Around birth, the occipital is usually split into four major components: pars squama (1), pars lateralis (2), and pars basilaris (1).</p>
-		<p>The pars squama is made up of separate ossification centers that begin to fuse in utero. At birth, fusion is not usually complete and the remnant of the sutura mendosa is present. The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (CITATIONS).</p>
-		<p>The pars laterales are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum. Fusion to the pars squama occurs first and takes place between the first and third years (CITATIONS).</p>
-		<p>The pars basilaris makes up the base of the occipital in adults. On the posterior aspect, fusion of the pars basilaris to the pars lateralis takes places between years 5 and 7 (CITATIONS). The anterior surface later fuses to the sphenoid at the spheno-occipital synchondrosis. Fusion of these surfaces tends to be highly variable and even different between the sexes. Fusion of the spheno-occipital synchorosis in females takes places between 11 and 16 years (CITATIONS) while in males, fusion occurs between 13 and 18 years (CITATIONS). As a result, relying on this single fusion center for age-at-death estimations is not entirely accurate but can be used to corroborate the age estimation based on other areas.</p>
+		<p>Compared to other bones, the commencement, timing, and order of ossification centers for the fibula is comparatively normal.  At birth, the individual is only represented by the diaphysis and no epiphyses, unlike it is with the femur and the tibia (Scranton et al. 1976).</p>
+		<p>Between 10 and 22 months, the distal epiphysis begins its ossification process.  During the 4th and 5th years, the proximal ossification centers begin ossification (Love et al. 1990).  Like with many other bones, it appears that females grow and develop their skeletal system much more quickly than males.  The distal epiphysis fuses between 12 and 15 years (in females) and 15-18 in males (Scheuer and Black 2014). </p>
+		<p?>Lastly, the proximal epiphysis fuses to the fibula, making up the ‘head of the fibula’.  In females, this occurs between 12 and 17 years while for males, it fuses between 15 and 20 years on average.</p>
+
 		</div>
 	</div>
 	
 	<div class="col-lg-3">
 		<div class="estimate">
-			<p><b>Head of the fibula</b></p>
+			<p><b>Proximal epiphysis - head</b></p>
 					
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 (F) and 15 (M)';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 12-17(F) and 15-20 (M)';">
 
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 17 (F) and 20 (M)';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<br><br><p><b>Lateral malleolus</b></p>
+			<br><br><p><b>Distal epiphysis - lateral malleolus</b></p>
 		
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years';">
 
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='12-15(F) and 15-18 (M)';">
 
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='older than 18 years';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
