--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -387,8 +387,7 @@
 		<div class="description">
 		<h2><a name="feet1">Feet</a></h2>
 			<h2>Tarsals</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+			<p>Like the carpals in the wrists, tarsals in the ankle make up an incredibly complex joint.  To accompany that complex joint is the complicated way that the bones ossified.  Similar to the way that the carpals are dealt with on this site, only the appearance of tarsals will be mentioned due to their complex timetable (Cardoso 2010). (Note: the absence of one tarsal does not mean that that particular tarsal was never ossified, but that it may be lost or degraded due to poor preservation.)</p>
 		</div>
 	</div>
 	
@@ -396,19 +395,19 @@
 		<div class="estimate">
 			<p><b>Presence of tarsals:</b></p>
 			
-			<input type="button" value="Calcaneus" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Calcaneus" onclick="document.getElementById('age-range').value='Present at birth';">
 
-			<br><br><input type="button" value="Talus" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Talus" onclick="document.getElementById('age-range').value='Present at birth';">
 			
-			<br><br><input type="button" value="Cuboid" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Cuboid" onclick="document.getElementById('age-range').value='Appears after 1-3 months';">
 			
-			<br><br><input type="button" value="Navicular" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<br><br><input type="button" value="Navicular" onclick="document.getElementById('age-range').value='Appears2-3 years (F) and 3-4 years (M)';">
 			
-			<br><br><input type="button" value="Medial (first) cuneiform" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Medial (first) cuneiform" onclick="document.getElementById('age-range').value='Appears 2-4 years';">
 			
-			<br><br><input type="button" value="Middle (second) cuneiform" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Middle (second) cuneiform" onclick="document.getElementById('age-range').value='Appears 2-4 years';">
 			
-			<br><br><input type="button" value="Lateral (third) cuneiform" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Lateral (third) cuneiform" onclick="document.getElementById('age-range').value='Appears 3-6 years';">
 	
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 
@@ -427,8 +426,9 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2>Metatarsals</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+		<p>Like in the metacarpals in the hand, ossification for the metatarsals on digits 2-5 is different than for the first metacarpal.  All metatarsal bodies are present at birth, however the base of the first metatarsal doesn’t appear until the individual is 2-3 years old, with fusion not complete until 13-15 years (female) or 16-18 years (male) (Davies et al. 2013).</p>
+		<p>For the metatarsals of digits 2-5, the epiphyseal heads don’t appear until 2-3 years of age similar to the base of the first metatarsal.  The heads fuse to the rest of the metatarsals somewhat earlier than does the base of the first phalanx though.  Fusion appears to be regulated to some extent by the individual’s sex, but fusion times occur around 11-13 years old for females, and 14-16 for males (Scheuer and Black 2004).</p>
+
 		</div>
 	</div>
 	
@@ -436,19 +436,24 @@
 		<div class="estimate">
 			<p><b>Fusion of base to 1st metatarsal:</b></p>
 			
-			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 13 years';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='13-15 years (F) and 16-18 years (M)';">
 			
-			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='15+ (F)and 18+ (M)';">
 			
+			<br><br><input type="button" value="Clear age range" onclick="document.getElementById('age-range').value='_';">
+
 			<br><br><p><b>Fusion of heads to metatarsals 2-5</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (F) or 14 (M) years';">
 			
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='11-13 (F) and 14-16 (M)';">
 			
-			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 13 (F) and 16 (M)';">
+					
+			<br><br><input type="button" value="Clear age range" onclick="document.getElementById('age-range').value='_';">
+
 			
 			<br>
 		</div>
@@ -466,8 +471,9 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2>Pedal phalanges</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+		<p>The appearance and fusion of pedal phalanges is very similar to manual phalanges.  All of the phalanges are present at birth, but have somewhat different appearance and fusion times.  </p>
+		<p>Bases for the proximal phalanges appear around age 1-2 years old and fuse between 13 and 15 years old (females) and 16-18 years old (males).  The appearance of epiphyseal bases for the middle and distal phalanges are only slightly different.  Middle phalangeal bases start to ossify around 1-2 years while bases for distal phalanges ossify around 2-3 years (Schuler-Ellis and Lazar 1984).</p>
+		<p>However, fusion times of the bases to both the middle and distal phalanges take place around the same time: 11-13 years for females and 14-16 for males.</p>
 		</div>
 	</div>
 	
@@ -475,19 +481,21 @@
 		<div class="estimate">
 			<p><b>Fusion of bases to proximal phalanges</b></p>
 			
-			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 13';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 13-15';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='_';">
+			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 15 ';">
 			
+			<br><input type="button" value="Clear age range" onclick="document.getElementById('age-range').value='_';">
+
 			<br><p><b>Fusion of bases to intermediate and distal phalanges</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (F) and 14 (M)';">
 			
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 11-13 (F) and 14-16 (M)';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='13+ (F) and 16+ (M)';">
 			
 			<br>
 		</div>
