--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -517,8 +517,8 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="lower_limbs.html">
-                    <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
+                <a href="thorax.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
                 </a>
             </div>
 
