--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -263,8 +263,10 @@
 	    
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<img src="img/pics/scapula.png" alt="Scapula" style="width:100%; height:100%;">
+		<img src="img/pics/scap.png" alt="Scapula" style="width:100%; height:100%;">
 		<h6>Scapula with the coracoid epiphysis.</h6>
+		<img src="img/pics/glenoid.png" alt="Scapula" style="width:100%; height:100%;">
+
         </div>
             
 	<div class="col-lg-3">
