--- a/thorax.html
+++ b/thorax.html
@@ -208,9 +208,7 @@
 	</div>
 </section>
 	    
-<br>    
-    <hr>
-<br>
+<br><br>
 	    
 <section class="container"> 
 	<div class="col-lg-4">
@@ -519,7 +517,7 @@
 	<div class="col-lg-4"> 
 		<img src="img/pics/ribs.png" alt="Ribs" style="width:100%; height:100%;">
 		<h6>Juvenlie ribs</h6>
-		<img src="img/pics/tibs2.png" alt="Vertebral end of ribs" style="width:100%; height:100%;">
+		<img src="img/pics/ribs2.png" alt="Vertebral end of ribs" style="width:100%; height:100%;">
 		<h6>Close-up of the vertebral rib ends without rib head epiphyses</h6>
 
         </div>
