--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -186,7 +186,7 @@
 		<h6>Unfused os coxa of a perinate.</h6>
 		<img src="img/pics/pelvis2.png" alt="Child pelvis" style="width:100%; height:100%;">
 		<h6>Unfused os coxa of a child.</h6>
-		<img src="img/pics/pelvis-epiph"> alt="Pelvis with fusing epiphyses" style="width:100%; height:100%;">
+		<img src="img/pics/pelvis-epiph.png"> alt="Pelvis with fusing epiphyses" style="width:100%; height:100%;">
 		<h6>Oblique view of a right ilium showins a nearly complete fusion of the anterior inferior iliac spine and a fusing iliac crest.</h6>
         </div>
             
