--- a/thorax.html
+++ b/thorax.html
@@ -203,7 +203,7 @@
 		
 	<div class="col-md-1">
 		<div class="fixed">
-		<h5>Estimated Age Range:<input type="text" id="age-range" value="" size=33></h5>
+		<h5>Estimated Age Ranges:<input type="text" id="age-range" value="" size=33></h5>
 		</div>
 	</div>
 </section>
