--- a/thorax.html
+++ b/thorax.html
@@ -98,7 +98,7 @@
         <!-- Portfolio Item Row -->
         <section class="row">
 
-            <div class="col-md-7">
+            <div class="col-lg-7">
      <?xml version="1.0" encoding="UTF-8"?>
 <svg id="svg" width="100%" height="100%" display="block" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
  <metadata>
