--- a/thorax.html
+++ b/thorax.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: Thorax</title>
+    <title>J-Skel: thorax</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,14 +31,10 @@
 			fill: #979797;
 			transform:scale (1.2); 
 			}
-
 	</style>
-   
-
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -66,7 +62,7 @@
             			<li><a href="lower_limbs.html">Lower Limbs</a></li>
          			 </ul>
         			</li>
-                    <li>>
+                    <li>
                     <li>
                         <a href="references.html">References</a>
                     </li>
@@ -86,15 +82,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Thorax
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+                <h1 class="page-header">The Thorax
+                    <small>Fusion of epiphyses in the chest region</small>
                 </h1>
             </div>
         </div>
         <!-- /.row -->
-
-       
-
         <!-- Portfolio Item Row -->
         <section class="row">
 
