--- a/thorax.html
+++ b/thorax.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: thorax</title>
+    <title>J-Skel: Thorax</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
         <!-- Portfolio Item Row -->
         <section class="row">
 
-            <div class="col-lg-7">
+            <div class="col-lg-6">
      <?xml version="1.0" encoding="UTF-8"?>
 <svg id="svg" width="100%" height="100%" display="block" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
  <metadata>
