--- a/thorax.html
+++ b/thorax.html
@@ -82,8 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Skull
-                    <small>Fusion of cranial and mandibular elements</small>
+                <h1 class="page-header">The Thorax
                 </h1>
             </div>
         </div>
