--- a/thorax.html
+++ b/thorax.html
@@ -196,16 +196,20 @@
             
             <div class="col-md-3">
 		    <div class="description">
-                <h2>Bones of the skull</h2>
-                    <p>The bones of the skull used for juvenile aging in this project are:<p>
-                   	 <ul>
-			    <li><a href="#frontal1">Frontal</a></li>
-			    <li><a href="#temporal1">Temporal</a></li>
-			    <li><a href="#occipital1">Occipital</a></li>
-			    <li><a href="#sphenoid1">Sphenoid</a></li>
-			    <li><a href="#mandible1">Mandible</a></li>
-			    <li><a href="#dentition1">Dentition</a></li>
-                    	</ul> 
+               <h2>Bones of the thorax</h2>
+		    <p>The bones of the thorax used for juvenile aging in this project are:<p>
+			 <ul>
+			    <li>Vertebrae</li>
+				 <ul>
+					 <li><a href="#atlas1">C1 - Atlas</a></li>
+					 <li><a href="#axis1">C2 - Axis</a></li>
+					 <li><a href="#cerv1">Cervical vertebrae</a></li>
+					 <li><a href="#thor1">Thoracic vertebrae</a></li>
+					 <li><a href="#lum1">Lumbar vertebrae</a></li>
+				 </ul>
+				 <li><a href="#sternum1">Sternum</a></li>
+				 <li><a href="#ribs1">Ribs</a></li>				   
+			</ul>
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
 		    <li>Select the level of fusion or development for the bone provided in the <b>Age Estimator</b> box to receive an age estimation.</li>
