--- a/thorax.html
+++ b/thorax.html
@@ -470,7 +470,7 @@
 		    
 	<section class="container">
 		<div class="col-lg-4">
-			<img src="img/pics/sternum.png" alt="Sternum" style="width:100%; height:100%;">
+			<br><br><br><br><img src="img/pics/sternum.png" alt="Sternum" style="width:100%; height:100%;">
 			<h6>Subadult sternum showing unfused sternebrae.  Note: sternebra 4 is missing due to preservation.</h6>
 	        </div>
 	            
