--- a/thorax.html
+++ b/thorax.html
@@ -476,7 +476,8 @@
 	            
 		<div class="col-lg-3">
 			<div class="description">
-			<h2><a name="sternum1">The Sternum</a></h2>
+				<h7><a name="sternum1">sternum</a></h7>
+			<br><br><br><br><h2>The Sternum</h2>
 			<p>The juvenile sternum is comprised of multiple separate pieces or centers called ‘sternebrae’.  At birth, the sternum is represented by at least 4 sternebrae (manubrium included) with a fourth sternebra ossifying within the first year (Ashley 1954, 1956).</p>
 			<p>Between the ages of 3 and 6, the xiphoid process usually starts to ossify, by which, all sternebrae are present.  The sternebrae are numbered from 1 to 4, going superior to inferior.  Between 4 and 10 years of age, sternebrae 3 and 4 fuse. Sternebra 2 fuses to 3 and 4 around years 11 to 16.  The first sternebra may not fuse to the rest of the others until 15 to 20 years after birth (Ashley 1956).  Finally, the xiphoid process may start fusing to the rest of the sternum around age 40 or later (Ashley 1956).</p>
 	
@@ -485,7 +486,7 @@
 		</div>
 		
 		<div class="col-lg-3">
-			<div class="estimate">
+			<br><br><br><br><div class="estimate">
 				<h2>Age Estimator</h2>
 				
 				<p><b>Fusion of sternebrae 3 &amp; 4</b></p>
