--- a/thorax.html
+++ b/thorax.html
@@ -337,7 +337,7 @@
 	            
 		<div class="col-lg-3">
 			<div class="description">
-			<h2><a name="cerv1">Cervical vertebrae</a></h2>
+			<h7><a name="cerv1">Cervical vertebrae</a></h7>
 				<br><br><br><br><h2>Cervical vertebrae</h2>
 			<p>Primary ossification centers for vertebrae C3-C7 appear in utero and are present at birth.  Like all other vertebrae (except for C1 and C2), there are three primary ossification centers: two half <b>neural arches</b> and the <b>centrum</b>.</p>
 			<p>The two half neural arches fuse together around age two (Patcas et al. 2013).  Around ages three to four years, the neural arch fuses to the centrum (Patcas et al. 2013).  Additionally, there are five epiphyses that appear and fuse during puberty: 2 annular rings that occur on the superior and inferior surfaces of the centrum, 2 epiphyses on the ends of the transverse processes, and 1 epiphysis on the tip of the spinous process (CITATIONS).</p>
@@ -563,7 +563,7 @@
 		</div>
 			
 		<div class="col-lg-3">
-			<div class="estimate">
+			<br><br><br><br><div class="estimate">
 				<h2>Age Estimator</h2>
 					
 				<br><br><p><b>Fusion of vertebral rib end epiphyses</b></p>
