--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -283,11 +283,11 @@
 		<br><br><br><br><div class="estimate">
 			<p><b>Coracoid epiphysis</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 15 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 14 years';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 15-18 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 14-15 years';">
 
-				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 18 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 15 years';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -400,10 +400,9 @@
 		<div class="description">
 		<h7><a name="ulna1">Ulna</a></h7>
 			<br><br><br><br><h2>Ulna</h2>
-		<p>The occipital bone is made up of multiple ossification centers that appear in utero. Postnatal fusion of these ossification centers to each other are not all concurrent, but occur in a specific order and on a known schedule. Around birth, the occipital is usually split into four major components: pars squama (1), pars lateralis (2), and pars basilaris (1).</p>
-		<p>The pars squama is made up of separate ossification centers that begin to fuse in utero. At birth, fusion is not usually complete and the remnant of the sutura mendosa is present. The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (CITATIONS).</p>
-		<p>The pars laterales are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum. Fusion to the pars squama occurs first and takes place between the first and third years (CITATIONS).</p>
-		<p>The pars basilaris makes up the base of the occipital in adults. On the posterior aspect, fusion of the pars basilaris to the pars lateralis takes places between years 5 and 7 (CITATIONS). The anterior surface later fuses to the sphenoid at the spheno-occipital synchondrosis. Fusion of these surfaces tends to be highly variable and even different between the sexes. Fusion of the spheno-occipital synchorosis in females takes places between 11 and 16 years (CITATIONS) while in males, fusion occurs between 13 and 18 years (CITATIONS). As a result, relying on this single fusion center for age-at-death estimations is not entirely accurate but can be used to corroborate the age estimation based on other areas.</p>
+		<p>Similarly to the radius, the ulnar shaft is only present at birth.  The distal epiphysis appears around 5-7 (Elgenmark 1946; Flecker 1962) but doesn’t fuse to the ulnar shaft until between 17 and 20 (Hansman 1962; Flecker 1962).</p>
+		<p>The proximal (or olecranon) epiphysis appears by 8-10 years in children and also fuses before the distal epiphysis (Ogden et al. 1981). Union between the diaphysis and the olecranon can occur between 12 and 14 years.</p>
+
 		</div>
 	</div>
 	
@@ -449,8 +448,8 @@
 		<div class="description">
 		<h7><a name="hands1">Hands</a></h7>
 			<br><br><br><br><h2>Hands</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+			<br><br><h2>Carpals</h2>
+			<p>The carpals in the hand can be a great way of estimating age of subadults as they do not all appear simultaneously.  Carpals tend to follow a generalized schedule that appears to be relatively consistent (O’Rahilly et al. 1959).  Due to the number of them, and to save space on the page, use the age estimator to the right to find out at what ages certain carpals appear.</p>
 		</div>
 	</div>
 	
@@ -495,8 +494,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2>Metacarpals</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+		<p>The metacarpals are another useful way to estimate age.  The first metacarpal does not have an ossification or fusion pattern like the other metacarpals.  The proximal end of the first metacarpal fuses with a base epiphysis (around age 16 (Moss and Noback 1958)).  However, the metacarpals for digits 2-5 do not have base epiphyses, but head epiphyses.  These appear around ages 2-3 but don’t fuse to the rest of the metacarpal until 14-16 (Scheur and Black 2004; Noback et al. 1960).</p>
 		</div>
 	</div>
 	
@@ -537,8 +535,8 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h2>Manual phalanges</h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
+			<p>Osseous phalanges are present at birth, but the appearance of their epiphyseal bases doesn’t occur until 1-2 years for proximal phalanges and 2-3 year for middle and distal phalanges (Scheur and Black 2004).</p>
+			<p>Fusion of the all of the bases occurs around the same time, so only they’re pooled age range will be used.  The bases of the phalanges usually fuse to the rest of the bone between 13 and 16 years of age (Scheur and Black 2004).</p>
 		</div>
 	</div>
 	
