--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -326,7 +326,7 @@
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
-			<p><b>Distal humerus</b></p>
+			<br><p><b>Distal humerus</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years old';">
 
