--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -326,7 +326,7 @@
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
-			<br><p><b>Distal humerus</b></p>
+			<br><br><p><b>Distal humerus</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 12 years old';">
 
@@ -423,7 +423,7 @@
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 17 years';">
 
-			<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 17-20 years';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 17-20 years';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 20 years';">
 			
@@ -548,7 +548,7 @@
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 13-16 years';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 years';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 16 years';">
 		</div>
 	</div>
 </section>	  
