--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>J-Skel: Skull</title>
+    <title>J-Skel: Pelvic Girdle</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -82,8 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Skull
-                    <small>Fusion of cranial and mandibular elements</small>
+                <h1 class="page-header">The Pelvic girdle
                 </h1>
             </div>
         </div>
