--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -154,7 +154,7 @@
             
             <div class="col-md-3">
 		    <div class="description">
-                <h2>Bones of the skull</h2>
+                <h2>Bones of the pelvic girdle</h2>
                     <p>The bones of the pelvic girdle used for juvenile aging in this project are:<p>
                    	 <ul>
 			    <li><a href="#oscoxa1">Os coxa</a></li>
@@ -196,7 +196,7 @@
 			<br><br><br><br><h2><b>Os coxa</b></h2>
 		<p>At birth, all three bones of the os coxa are present: ilium, ischium, and pubis.  These three bones do not all fuse together at the same time, but in a specific order at different times.  Additionally, there are numerous small and ‘ossific islands’ that appear and fuse during growth and development, but only the bigger and main epiphyses will be discussed here.</p>
 		
-		<h2>Ischiium and pubis</h2>	
+		<h2>Ischium and pubis</h2>	
 			<p>The first bones to fuse are the ischium and pubis along the ischiopubic ramus (Caffey and Madell 1956; Cardoso et al. 2013).  This normally occurs in individuals around ages 5 to 8 years although earlier has been reported (Scheuer and Black 2004).</p>
 			<p>Around 14 to 18 years of age, the acetabulum begins and completes fusion, ossifying the ilium, ischium, and pubis together. </p>
 			
