--- a/skull.html
+++ b/skull.html
@@ -234,7 +234,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="frontal1">The Frontal</a></h7>
-			<br><br><br><br><h2>Frontal bone</h2>
+			<br><br><br><br><h2><b>Frontal bone</b></h2>
 		<p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture. Studies have shown (Togersen 1950) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.</p>
 		</div>
 	</div>
@@ -268,7 +268,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="temporal1">The Temporal</a></h7>
-			<br><br><br><br><h2>Temporal bone</h2>
+			<br><br><br><br><h2><b>Temporal bone</b></h2>
 		<p>The components and ossification of the temporal bone are very complex so only two major centers will be addressed here.  At birth, the temporal bone is generally separated into two main ossification centers: the pars squama/temporal squama and the pars petrosa (the petrous portions in adults).</p>
 		<p>The temporal squama and pars petrosa usually fuse together to form one single temporal bone within the first year of life (Weaver 1979).</p>
 		</div>
@@ -301,7 +301,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="occipital1">The Occipital</a></h7>
-			<br><br><br><br><h2>Occipital</h2>
+			<br><br><br><br><h2><b>Occipital</b></h2>
 		<p>The occipital bone is made up of multiple ossification centers that appear in utero. Postnatal fusion of these ossification centers to each other are not all concurrent, but occur in a specific order and on a known schedule. Around birth, the occipital is usually split into four major components: pars squama (1), pars lateralis (2), and pars basilaris (1).</p>
 		<p>The pars squama is made up of separate ossification centers that begin to fuse in utero. At birth, fusion is not usually complete and the remnant of the sutura mendosa is present. The sutura mendosa runs infero-laterally and usually disappears by the end of the first year after birth (Scheuer and MacLaughlin-Black 1994).</p>
 		<p>The pars laterales are the bilateral ossification centers that house the occipital condyles as well as make up the majority of the border of the foramen magnum. Fusion to the pars squama occurs first and takes place between the first and third years (Scheuer and MacLaughlin-Black 1994; Shapiro and Robinson 1976).).</p>
@@ -361,7 +361,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="sphenoid1">The Sphenoid</a></h7>
-			<br><br><br><br><h2>Sphenoid</h2>
+			<br><br><br><br><h2><b>Sphenoid</b></h2>
 			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life, yet fusion of some of these occurs before birth (Kier and Rothman 1976).</p>
 			<p>By birth, three centers are normally present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (Kier and Rothman 1976).  Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
 			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (Scheur and Black 2004).</p>
@@ -406,7 +406,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="mandible1">The Mandible</a></h7>
-			<br><br><br><br><h2>The Mandible</h2>
+			<br><br><br><br><h2><b>The Mandible</b></h2>
 		<p>Similar to the frontal bone, the mandible originates as two separate ossification centers that fuse to become one single bone.  This fusion occurs at midline (bisecting the mental eminence) at the mandibular symphysis.  The fusion of the two mandibular halves takes place within the first year of life meaning that if infant remains present two mandibular halves, the individual died within the first year of life (Walker and Kowalski 1972).</p>
 		</div>
 	</div>
@@ -432,16 +432,17 @@
 <section class="container"> 
 	<div class="col-lg-6"> 
 		<br><br><br><br><img src="img/dentition 1.png" alt="Mixed dentition" style="width:100%; height:100%;">
+		<img src="img/pics/mandible1.png" alt="Fragmented mandible with visible tooth crypts" style="width:100%; height:100%;">
         </div>
             
 	<div class="col-lg-6">
 		<div class="description">
 		<h7><a name="dentition1">Dental Eruption &amp; Tooth Development</a></h7>
-			<br><br><br><br><h2>Dental Eruption &amp; Tooth Development</h2>
+			<br><br><br><br><h2><b>Dental Eruption &amp; Tooth Development</b></h2>
 	<	p>It has been proven that teeth are less likely to be affected by extrinsic forces during development compared to the skeleton.  Skeletal elements are much more plastic and can have adverse effects as a result of malnutrition, disease, or any prolonged stress event.  These events can cause stunting and delayed development, yet teeth seem to be under tighter genetic control, allowing them to develop and erupt on a regular schedule, despite what may be happening with the rest of the body.</p>
 		<p>As a result, using dentition is one of the most accurate methods for estimating the ages of subadults.  This can be accomplished in two different ways: tooth formation and dental eruption.  Tooth formation tracks the development of teeth as they are formed from crown to root.  The rates are relatively well known and can help track down age estimates.  </p>
 		<p>Dental eruption is also a strong technique, and one of the most widely used methods in the world.  Both deciduous and permanent teeth erupt from your gums in a very specific and known order, as well as on a fairly understood schedule.  Ages of subadults can even be estimated down the less than a year based on population-specific dental eruption charts.</p>
-		<p>Though they are not without their faults, these are great methods for age estimation.  Due to their complex nature, these methods cannot be described here as it would not do them justice.  For more information and resources on dental development and eruption, please visit……….. </p>
+		<p>Though they are not without their faults, these are great methods for age estimation.  Due to their complex nature, these methods cannot be described here as it would not do them justice.</p>
 		</div>
 	</div>
 </section>	    
